# reaper-plugin-dev

./: .gitignore  .nojekyll  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  REAPACK.md  cmake_install.cmake  reaper_ReaperPluginExample.dylib  reaper_enz_ReaperTools.dylib  reaper_plugin_list.txt  reaper_plugin_list.xml
.github/scripts/: update_reapack_index.py
.github/workflows/: build.yml  pages.yml
docs/: index.html
docs/reapack/: index.xml
reapack/: index.xml
scripts/: release.sh
src/: main.cpp
